# VBdeskBot

./: .gitignore  ANCHOR_CONTRACT_DELIVERY.md  ANCHOR_INTEGRATION_GUIDE.md  APPROVAL.md  ARCHITECTURE_DIAGRAM.md  AUTONOMOUS_SESSION_LOG.md  Anchor.toml  BUILD_SUCCESS.md  CLOUDFLARE_BUILD_SETTINGS.md  CLOUDFLARE_DEPLOY.md  CLOUDFLARE_FIX.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  FORUM_POST.md  FRONTEND_PLAN.md  FRONTEND_README.md  HEARTBEAT.md  HEARTBEAT_REPORT.md  LICENSE  MEMORY.md  NEXT_TASKS.md  ORCHESTRATOR_REPORT.md  PHASE_1_SUMMARY.md  PUSH_BLOCKER.md  QUICKSTART.md  README.md  SECURITY_AUDIT.md  SUBAGENT_COMPLETION_REPORT.md  TODAY_SUMMARY.md  VB_DESK_CONTRACT_REFINED.rs  client-example.ts  wrangler.toml
app/: IMPLEMENTATION_GUIDE.md  PROJECT_STATUS.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
docs/: AGENTWALLET_GUIDE.md  (+8 more)
programs/vb_desk/: .gitignore  Anchor.toml  Cargo.toml  DAY2_QUICKSTART.md  HANDOFF.txt  INDEX.md  PHASE1_COMPLETE.txt  PHASE1_VERIFICATION.txt  README.md  REVIEWBOT_README.md  REVIEWBOT_SESSION_SUMMARY.md  START_HERE.md  TESTING_CHECKLIST.md  TEST_PLAN.md  build.sh  package.json
programs/vb_desk/.github/workflows/: test.yml
programs/vb_desk/docs/: API.md  ARCHITECTURE.md  SECURITY.md  SETUP.md  SPEC.md  TIMELINE.md
programs/vb_desk/programs/vb-desk/: Cargo.toml
programs/vb_desk/programs/vb-desk/src/: lib.rs
programs/vb_desk/scripts/: deploy.sh  test.sh
programs/vb_desk/src/: lib.rs
programs/vb_desk/tests/: Cargo.toml  README.md  test-wallets.json  vb_desk.test.ts
(+52 files in other folders)
