[package]
name = "vb_desk"
version = "0.1.0"
description = "Sealed-bid auction OTC trading platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vb_desk"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[profile.release]
overflow-checks = true
